# social-media-dipstick

./: .editorconfig  .guix-channel  CITATION.cff  LICENSE.txt  README.md  RSR_COMPLIANCE.adoc  STATE.scm  codemeta.json  guix.scm  podman-compose.enhanced.yml
.github/workflows/: codeql.yml
.well-known/: dc.xml
config/cue/: twitter_extraction.cue
services/database-adapter/: virtuoso_adapter.py
services/graphql-gateway/: main.py  pyproject.toml
services/tui-ada/src/: nuj_tui.adb
